--- a/ios/dataHub/Info.plist
+++ b/ios/dataHub/Info.plist
@@ -72,6 +72,14 @@
 		<string>Nunito-SemiBold.ttf</string>
 		<string>Nunito-SemiBoldItalic.ttf</string>
 		<string>Nunito-VariableFont_wght.ttf</string>
+		<string>Manrope-Bold.ttf</string>
+		<string>Manrope-ExtraBold.ttf</string>
+		<string>Manrope-ExtraLight.ttf</string>
+		<string>Manrope-Light.ttf</string>
+		<string>Manrope-Medium.ttf</string>
+		<string>Manrope-Regular.ttf</string>
+		<string>Manrope-SemiBold.ttf</string>
+		<string>Manrope-VariableFont_wght.ttf</string>
 	</array>
 </dict>
 </plist>
