--- a/ios/dataHub/Info.plist
+++ b/ios/dataHub/Info.plist
@@ -142,6 +142,22 @@
 		<string>EBGaramond-SemiBold.ttf</string>
 		<string>EBGaramond-SemiBoldItalic.ttf</string>
 		<string>EBGaramond-VariableFont_wght.ttf</string>
+		<string>RobotoMono-Bold.ttf</string>
+		<string>RobotoMono-BoldItalic.ttf</string>
+		<string>RobotoMono-ExtraLight.ttf</string>
+		<string>RobotoMono-ExtraLightItalic.ttf</string>
+		<string>RobotoMono-Italic-VariableFont_wght.ttf</string>
+		<string>RobotoMono-Italic.ttf</string>
+		<string>RobotoMono-Light.ttf</string>
+		<string>RobotoMono-LightItalic.ttf</string>
+		<string>RobotoMono-Medium.ttf</string>
+		<string>RobotoMono-MediumItalic.ttf</string>
+		<string>RobotoMono-Regular.ttf</string>
+		<string>RobotoMono-SemiBold.ttf</string>
+		<string>RobotoMono-SemiBoldItalic.ttf</string>
+		<string>RobotoMono-Thin.ttf</string>
+		<string>RobotoMono-ThinItalic.ttf</string>
+		<string>RobotoMono-VariableFont_wght.ttf</string>
 	</array>
 </dict>
 </plist>
