--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@types/react-native-sqlite-storage": "^6.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gif": "^1.0.3",
+    "react-native-modal-dropdown": "^1.0.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-sqlite-storage": "^6.0.1",
