--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gif": "^1.0.3",
     "react-native-modal-dropdown": "^1.0.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-svg": "^13.14.0",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
