--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-native-sqlite-storage": "^6.0.1",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gif": "^1.0.3",
     "react-native-modal-dropdown": "^1.0.2",
